--- a/.gitignore
+++ b/.gitignore
@@ -72,7 +72,7 @@ CMakeUserPresets.json
 *-prefix/
 
 ### VisualStudioCode ###
-.vscode/*
+.vscode/
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
